package src.main.java.validators;

public class ValidationException extends RuntimeException {
  public ValidationException(String message) {
    super(message);
  }
}
