package src.main.java.validators;

public interface Validator {
  void validate();
}
